<?xml version="1.0"?>
<package format="2">
  <name>guidance</name>
  <version>0.0.1</version>
  <description>
    ROS package to control the DJI Guidance, based off the official package.
    This one differs in that hopefully it will support more ROS infrastructure.
  </description>

  <author>DJI</author>
  <author email="andre-phu-van.nguyen@polymtl.ca">Andre Phu-Van Nguyen</author>
  <maintainer email="andre-phu-van.nguyen@polymtl.ca">Andre Phu-Van Nguyen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
  </export>
</package>
